Refactor: sonarqube 냄새 잡기